--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
     <title>Pramod Kaushik Mudrakarta</title>
   </head>
   <body>
-    <table>
-      <tr>
-        <td>2019 - now: Software Engineer, Google</td>
-        <td>2014 - 2019: Ph.D. Computer Science (Machine Learning), The University of Chicago</td>
-      </tr>
-    </table>
+    Since 2019, I have been working as a Software Engineer at Google. Before that, I completed my Ph.D. in Computer Science from the University of Chicago where I was advised by Prof. Risi Kondor. I have a Master's degree from Saarland University in Germany, and have held Research Assistant/Scientist positions at the Max-Planck Institute T&uuml;bingen, Germany. My undergraduate studies in Computer Science were completed at IIT Bombay. <br>
+    I have published in multiple areas within AI/Machine Learning, spanning bioinformatics, unsupervised learning, matrix factorization, multi-task learning, deep learning, and interpretability. Most recently at Google, I have worked on improving Machine Learning models for user-ad and user-product interactions such as clicks and conversions.
   </body>
 </html>
