--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="tufte.css"/>	  
     <title>Pramod Kaushik Mudrakarta</title>
   </head>
   <body>
