--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 		  <h1 id="tufte-css">Pramod Kaushik Mudrakarta</h1>
 		  <section>
 			  <p>
-			  Since 2019, I have been working as a Software Engineer at Google. Before that, I completed my Ph.D. in Computer Science from the University of Chicago where I was advised by <a href="https://people.cs.uchicago.edu/~risi/">Prof. Risi Kondor</a>. I have a Master's degree from Saarland University in Germany, and have held Research Assistant/Scientist positions at the Max-Planck Institute T&uuml;bingen, Germany. My undergraduate studies in Computer Science were completed at IIT Bombay. </p>
-			  <p>I have published in multiple areas within AI/Machine Learning, spanning bioinformatics, unsupervised learning, matrix factorization, multi-task learning, deep learning, and interpretability. Most recently at Google, I have worked on improving Machine Learning models for user-ad and user-product interactions such as clicks and conversions.</p>
+			  Since 2019, I have been working as a Software Engineer at Google. Before that, I completed my Ph.D. in Computer Science from the University of Chicago. I have a Master's degree from Saarland University in Germany, and have held Research Assistant/Scientist positions at the Max-Planck Institute T&uuml;bingen, Germany. My undergraduate studies in Computer Science were completed at IIT Bombay. </p>
+			  <p>I have published in multiple areas within AI/Machine Learning, spanning bioinformatics, unsupervised learning, matrix factorization, multi-task learning, deep learning, and neural network interpretability. Most recently at Google, I have worked on improving Machine Learning models for user-ad and user-product interactions such as clicks and conversions.</p>
 			  <p>
 			  <a href="https://scholar.google.com/citations?user=G0YpGHYAAAAJ&hl=en&oi=ao">Google Scholar</a><br>
-			  <a href="Curriculum_Vitae.pdf">Curriculum Vitae (may not be up-to-date)</a>
+			  <a href="Curriculum_Vitae.pdf">Curriculum Vitae</a><br>
+			  <a href="https://www.linkedin.com/in/pramkaush">LinkedIn</a>
 		  </section>
 	  </article>
   </body>
